# developers

./: .gitignore  AGENTS.md  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: bearing-publish.yml  bearing-quality.yml  bran-fast.yml  bran-release.yml  codeql.yml  npm-publish.yml  semgrep.yml  window-verify.yml
az-sports-dev/: .gitignore  .mcp.example.json  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  QWEN.md  README.md  SECURITY.md  agents.txt  llms.txt  package.json  public-boundary-manifest.json
az-sports-dev/api/: openapi.json  openapi.yaml
bearing/: .gitignore  DESIGN.md  LICENSE  README.md  SUBMISSION.md  package.json  pnpm-lock.yaml  tsconfig.json
bran/: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml
bran/crates/bran-core/: Cargo.toml
bran/crates/bran-core/src/: bundle.rs  lib.rs  profile.rs  schema.rs
bran/crates/bran-core/src/adapters/: mod.rs  sqz.rs
bran/crates/bran-core/src/agent/: coordinator.rs  delegate.rs  mod.rs  receipt.rs  result_store.rs  runtime.rs  synthetic.rs
bran/crates/bran-core/src/export/: mod.rs
bran/crates/bran-core/src/graph/: mod.rs  model.rs  query.rs
bran/crates/bran-core/src/metadata/: mod.rs
bran/crates/bran-core/src/packet/: mod.rs
bran/crates/bran-core/src/repair/: mod.rs
bran/crates/bran-core/src/scan/: digest.rs  graph_input.rs  ignore.rs  mod.rs
bran/crates/bran-core/src/view/: mod.rs
window/: .gitignore  .npmignore  DESIGN.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+287 files in other folders)
