[package]
name = "bran-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "repository_scan"
path = "../../benches/repository_scan.rs"
harness = false

[[bench]]
name = "knowledge_graph"
path = "../../benches/knowledge_graph.rs"
harness = false

[[bench]]
name = "context_packet"
path = "../../benches/context_packet.rs"
harness = false
